<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:theme="?attr/actionBarTheme"
        app:title="Tip Calculator"
        app:titleTextColor="@color/black"
        app:titleCentered="true"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- TextInputLayout untuk Cost of Service -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost_of_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cost_of_service"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextView untuk pertanyaan tentang layanan -->
            <TextView
                android:id="@+id/service_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/how_was_the_service"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <!-- RadioGroup untuk pilihan tip -->
            <RadioGroup
                android:id="@+id/tip_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:checkedButton="@id/option_ten_percent"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/round_up_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service_question">

                <!-- RadioButton untuk pilihan tip -->
                <RadioButton
                    android:id="@+id/option_ten_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_percent" />

                <RadioButton
                    android:id="@+id/option_fifteen_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteen_percent" />

                <RadioButton
                    android:id="@+id/option_twenty_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty_percent" />

                <RadioButton
                    android:id="@+id/option_twentyfive_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twentyfive_percent" />

                <RadioButton
                    android:id="@+id/option_thirty_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thirty_percent" />
            </RadioGroup>

            <!-- Switch untuk membulatkan tip -->
            <Switch
                android:id="@+id/round_up_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="@string/round_up_tip"
                app:layout_constraintStart_toStartOf="@id/tip_options"
                app:layout_constraintEnd_toEndOf="@id/tip_options"
                app:layout_constraintTop_toBottomOf="@+id/tip_options" />

            <!-- TextView untuk hasil tip -->
            <TextView
                android:id="@+id/tip_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tip_amount"
                app:layout_constraintStart_toStartOf="@id/tip_options"
                app:layout_constraintEnd_toEndOf="@id/tip_options"
                app:layout_constraintTop_toBottomOf="@+id/round_up_switch" />

            <!-- Tombol untuk menghitung tip -->
            <Button
                android:id="@+id/btn_calculate"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/calculate"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tip_result" />

            <!-- ImageView untuk gambar -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_calculate"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
